--- a/CSS/ejemplos/selectores/css/selectores.css
+++ b/CSS/ejemplos/selectores/css/selectores.css
@@ -27,3 +27,39 @@ p {
 p.importante {
 	font-weight: 600;
 }
+
+#segundo {
+	color:blue;
+}
+
+#segundo span{
+	font-weight: 900;
+	color:green;
+}
+
+#segundo strong{
+	text-decoration: underline;	
+}
+
+#segundo > strong {
+	font-family: times;
+	font-size: 150%;
+}
+
+a {
+	text-decoration: none;
+}
+
+a:hover {
+   text-decoration: underline;	
+}
+
+h3 {
+	font-size:2em;
+	background-color: rgb(200,100,0);
+	padding: 1em;
+	padding-left: 5em;
+	border:0.3em solid black;
+	margin-left:30px;
+	margin-top: 50px;
+}
